# Agentic-AI-Platform

./: .env.sample  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_API.md  Dockerfile  EASIEST_DEPLOYMENT.md  LICENSE  Makefile  NEXT_STEPS.md  PROJECT_HIGHLIGHTS.md  PROJECT_SUMMARY.md  PUSHED_TO_GITHUB.md  Procfile  QUICKSTART.md  README.md  RESUME_LINKS.md  RESUME_POINTS.md  RESUME_READY.md  STREAMLIT_DEPLOY.md  coverage.xml  docker-compose.yml  pyproject.toml  railway.json  requirements-streamlit.txt  requirements.txt  start.sh  streamlit_app.py  test_mlflow_setup.py
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: DOCKER_TROUBLESHOOTING.md  MLFLOW_USAGE.md  PROMETHEUS_GRAFANA_SETUP.md  QUICKSTART_MLFLOW.md  configuration.md
docs/api/: endpoints.md
docs/architecture/: diagrams.md  overview.md
docs/deployment/: kubernetes.md
grafana/dashboards/: agentic-ai-platform.json
grafana/provisioning/dashboards/: dashboard.yml
prometheus/: prometheus.yml
scripts/: evaluate_agent.py  generate_monitoring_traffic.py  import_grafana_dashboard.sh  prepare_github_push.sh  run_tests.sh  sample_queries.txt  setup.sh  test_mcp_connection.py
src/agentic_ai/: __init__.py
src/agentic_ai/agents/: __init__.py  base_agent.py  orchestrator.py  query_agent.py
src/agentic_ai/api/: __init__.py  dependencies.py  main.py
src/agentic_ai/api/routes/: conversation.py  health.py  query.py
src/agentic_ai/config/: __init__.py  settings.py
src/agentic_ai/core/: __init__.py  agent_factory.py  mcp_client.py
src/agentic_ai/monitoring/: __init__.py  logging.py  metrics.py  mlflow_tracker.py
src/agentic_ai/utils/: __init__.py  cache.py  rate_limiter.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_ground_truth.py  test_mcp_tools.py
tests/unit/: test_agent_factory.py  test_agents.py  test_cache.py  test_edge_cases.py  test_mcp_client.py  test_rate_limiter.py  test_service_failures.py
